<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ff_commands_publisher</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>TODO: License declaration</license>

    <author email="davide.debenedittis@gmail.com">Davide De Benedittis</author>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    
    <depend>ament_index_python</depend>
    <depend>rclpy</depend>
    <depend>rosbag2_py</depend>
    <depend>rosbag2-storage-mcap</depend>
    <depend>rviz2</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
